tests/snapshots/compile_file__just_paren.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/just_paren.hvm
---
Errors:
In tests/golden_tests/compile_file/just_paren.hvm :
[1m- expected:[0m function name
[1m- detected:[0m end of input
