tests/snapshots/compile_file__just_rule_paren.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/just_rule_paren.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/just_rule_paren.bend[0m[1m :[0m
[1m- expected:[0m '='
[1m- detected:[0m end of input
[0m 1 | (rule)[4m[31m [0m
