tests/snapshots/compile_file__just_rule_paren.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/just_rule_paren.hvm
---
Errors:
In tests/golden_tests/compile_file/just_rule_paren.hvm :
[1m- expected:[0m '='
[1m- detected:[0m end of input
