tests/snapshots/compile_file__let_adt_destructuring.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/let_adt_destructuring.hvm
---
@4 = ({2 @5 a} a)
@5 = (a a)
@Box = (a {2 (a b) b})
@main = a
& @4 ~ (b a)
& @Box ~ (#1 b)

