tests/snapshots/compile_file__let_adt_non_exhaustive.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/let_adt_non_exhaustive.hvm
---
Non-exhaustive pattern at definition 'main$match$1'. Hint: (main$match$1 None) not covered.
