tests/snapshots/compile_file__let_substitution.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/let_substitution.bend
---
@main = ({(a b) a} b)
