tests/snapshots/compile_file__let_substitution.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/let_substitution.hvm
---
@main = ({(a b) a} b)
