tests/snapshots/compile_file__let_tup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/let_tup.hvm
---
@main = ((a (* a)) (* (b b)))
