tests/snapshots/compile_file__lets.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/lets.bend
---
@main = o
  & (a a) ~ (g (j (n o)))
  & (e e) ~ *
  & (d d) ~ {(f g) f}
  & (c c) ~ {(h (i j)) {h i}}
  & (b b) ~ {(k (l (m n))) {k {l m}}}
