tests/snapshots/compile_file__linearize_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/linearize_match.hvm
---
@4 = (?<(@5 @6) a> a)
@5 = (a a)
@6 = (<+ a b> (a b))
@main = @4

